Server supports clarifications
